# discretisedfield

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  Untitled1.ipynb  appveyor.yml  history.org  metadata.json  nbval.cfg  new_interface.ipynb  pylint-default.txt  pylint-s1.txt  pyproject.toml  pytest.ini  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tasks.py
.github/: environment.yml
.github/workflows/: ai-pr-reviewer  ai-pr-reviewer.yml  conda.yml  test.yml  tests.yml  workflow.yml
binder/: environment.yml  postBuild  requirements.txt
dev/: demag.ipynb  diff.ipynb  hsv-plot.ipynb  interactive-plotting.ipynb  k3d-field.ipynb  k3d-usage.ipynb  line.ipynb  mesh.ipynb  minimalistic-example_k3d.ipynb  minimalistic-vis3d-ipyvolume.ipynb  mpl-plotting.ipynb  numba-value-norm.ipynb  operation-comparisons.ipynb  padding.ipynb  plotting.ipynb  plotting_testing.ipynb  pyvista.ipynb  region.ipynb  rotations.ipynb  test-vertex-field.ipynb  testing.ipynb  vtk-saving.ipynb  xarray.ipynb
discretisedfield/: README.md  __init__.py  cell_field.py  derivative.pyx  discretisedfield.py  field.py  field_new.py  field_rotator.py  interact.py  line.py  mesh.py  new_interface.ipynb  operations.py  operators.py  ovf2vtk.py  plot3d.py  read.py  refactoring.md  region.py  rotated_field.py  rotation.py  setup.cfg  vertex_field.py
discretisedfield/html/: __init__.py
discretisedfield/html/templates/: field.jinja2  field_rotator.jinja2  mesh.jinja2  region.jinja2
discretisedfield/html_templates/: __init__.py  html_templates.py
discretisedfield/html_templates/templates/: field.jinja2  field_rotator.jinja2  mesh.jinja2  region.jinja2
discretisedfield/io/: __init__.py  hdf5.py  ovf.py  ovf2vtk.py  util.py  vti.py  vtk.py
discretisedfield/operators/: __init__.py  operators.py
discretisedfield/plotting/: __init__.py  hv.py  hvplot_field.py  k3d.py  k3d_field.py  k3d_mesh.py  k3d_region.py  mpl.py  mpl_field.py  mpl_mesh.py  mpl_region.py  plotting-style.mplstyle  pv_field.py  pyvista_field.py  pyvista_mesh.py  pyvista_region.py  util.py
discretisedfield/tests/: __init__.py  conftest.py  mumax-output-win.ovf  mumax-output.ovf  test_discretisedfield.py  test_field.py  test_field_rotator.py  test_hopf.py  test_init.py  test_interact.py  test_issue001.py  test_line.py  test_mesh.py  test_mesh_new.py  test_operators.py  test_ovf2vtk.py  test_ovf_write_read.py  test_plotting.py  test_region.py  test_tools.py  test_typesystem.py  test_util.py  test_write_vtk_file.omf
discretisedfield/tests/test_sample/: demag_field_plane.omf  demag_field_sphere.omf  demag_tensor_oommf.omf  hdf5-file.hdf5  mumax-txt-linux.ovf  oommf-ovf1-bin4.omf  oommf-ovf1-bin8.omf  oommf-ovf1-txt.omf  oommf-ovf2-bin4.omf  oommf-ovf2-bin8.oef  oommf-ovf2-bin8.ohf  oommf-ovf2-bin8.omf  oommf-ovf2-txt.omf  ovf2-bin8_different-case.ovf  skyrmion-disk.omf  skyrmion.omf  testfile.hdf5  vtk-file.vtk  vtk-scalar-legacy.vtk  vtk-vector-legacy.vtk
discretisedfield/tools/: __init__.py  hopf.py  tools.py
discretisedfield/util/: __init__.py  abstractfield.py  k3dutil.py  operators.py  plotting-style.mplstyle  pyvtk_example.py  typesystem.py  util.py
docker/: Dockerfile  Dockerfile1  Dockerfile2
docs/: Makefile  api-reference.rst  api_documentation.rst  api_reference.rst  conf.py  conftest.py  field-definition.ipynb  field-fft.ipynb  field-holoviews-visualisation.ipynb  field-k3d-visualisation.ipynb  field-matplotlib-visualisation-NEW.ipynb  field-matplotlib-visualisation.ipynb  field-normalisation.ipynb  field-operations.ipynb  field-pyvista-visualisation.ipynb  field-read-write.ipynb  field-rotations.ipynb  field-spatially-varying.ipynb  field-tools.ipynb  field-valid.ipynb  field.rst  index.rst  installation-testing-update.ipynb  interact.rst  line.ipynb  line.rst  mesh-basics.ipynb  mesh-bc.ipynb  mesh-line-plane.ipynb  mesh-pad.ipynb  mesh-subregions.ipynb  mesh-visualisation.ipynb  mesh-widgets.ipynb  mesh.rst  operators.rst  ovf2vtk.ipynb  region-basics.ipynb  region-facing-surfaces.ipynb  region-visualisation.ipynb  region.rst  (+3 more)
docs/_templates/: class-template.rst  module-template.rst
docs/dev/: k3d-usage-old.ipynb  k3d-usage.ipynb  k3d_example.ipynb  k3d_example_realistic.ipynb  k3d_example_slice.ipynb  k3d_test.ipynb  minimalistic-example.ipynb  minimalistic-vis3d-ipyvolume.ipynb  skyrmion.ipynb
docs/ipynb/: 00-tutorial-installation-testing-upgrade.ipynb  01-tutorial-defining-mesh.ipynb  02-tutorial-mesh-properties-and-generators.ipynb  02-tutorial-mesh-properties.ipynb  03-tutorial-defining-regions.ipynb  03-tutorial-mesh-plotting.ipynb  04-tutorial-mesh-plotting.ipynb  05-tutorial-defining-field.ipynb  06-tutorial-spatially-varying-field.ipynb  07-tutorial-normalising-field.ipynb  08-tutorial-field-operations.ipynb  09-tutorial-matplotlib-visualisation.ipynb  10-tutorial-k3d-visualisation.ipynb  11-tutorial-read-write.ipynb  12-tutorial-ovf2vtk.ipynb  13-tutorial-other.ipynb  analysing_field.ipynb  creating_fd_field.ipynb  field-k3d-visualisation.ipynb  field-matplotlib-visualisation.ipynb  field-normalisation.ipynb  field-operations.ipynb  field-read-write.ipynb  field-rotations.ipynb  field-spatially-varying.ipynb  field-tools.ipynb  index-2.ipynb  index.ipynb  installation-testing-update.ipynb  mesh-basics.ipynb  mesh-line-plane.ipynb  mesh-pad.ipynb  mesh-subregions.ipynb  mesh-visualisation.ipynb  mesh-widgets.ipynb  minimalistic-example.ipynb  minimalistic-vis3d-ipyvolume.ipynb  minimalistic-vis3d-k3d.ipynb  new_interface.ipynb  other.ipynb  (+8 more)
workflows/: test.yml
