[build-system]
# 40.8.0 is the first version compatible with PEP 517
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discretisedfield"
version = "0.11.1"
description = "Python package for the analysis and visualisation of finite-difference fields."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

# authors could contain email addresses
# there is a second field "maintainers"
# we neet to think about where to put contributors
authors = [
  {name = "Marijan Beg"},
  {name = "Martin Lang"},
  {name = "Samuel Holt"},
  {name = "Ryan A. Pepper"},
  {name = "Hans Fangohr"}
]

# not yet supported by setuptools
# keywords = [...]
# classifiers = [...]
# dependescies = [...]
# [project.optional-dependencies]
# ...

[project.urls]
homepage = "ubermag.github.io"
documentation = "ubermag.github.io/documentation/discretisedfield"
repository = "github.com/ubermag/discretisedfield"

# console entry points
# [project.scripts]
# name = "entry_point:method"

# to define additional information we could use a custom table
# - we need to own the entry for tool.NAME on PyPI
#   see: https://www.python.org/dev/peps/pep-0518/#tool-table
# - we could use https://github.com/hukkin/tomli
#   for parsing the file in devtools
[tool.ubermag]
doi = "10.5281/zenodo.3539461"
copyright_holder = "Marijan Beg and Hans Fangohr"
contributors = [
  "Thomas Kluyver",
  "Sergii Mamedov",
  "Natalie Downing",
  "Min RK",
  "Rebecca Carey"
]
about = """
- definition of finite-difference regions, meshes, lines, and fields
- analysis of finite-difference fields,
- visualisation using `matplotlib` and `k3d`, and
- manipulation of different file types (OVF, VTK, and HDF5).
"""