[metadata]
name = discretisedfield
version = 0.60.0
description = Python package for the analysis and visualisation of finite-difference fields.
author = Marijan Beg, Martin Lang, Samuel Holt, Ryan A. Pepper, and Hans Fangohr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ubermag.github.io
licence = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
python_requires >= 3.8
install_requires =
    ubermagutil~=0.60.0
    pandas>=1.1
    matplotlib>=3.3
    jupyterlab~=3.0
    h5py>=3.1
    k3d>=2.11
    scipy>=1.6
    jinja2
    xarray
include_package_data = True

[options.entry_points]
console_scripts =
  ovf2vtk = discretisedfield.ovf2vtk:main
