[metadata]
name = discretisedfield
version = 0.61.0
description = Python package for the analysis and visualisation of finite-difference fields.
author = Marijan Beg, Martin Lang, Samuel Holt, Ryan A. Pepper, and Hans Fangohr
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ubermag.github.io
licence = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
python_requires >= 3.8
install_requires =
    ubermagutil~=0.61.0
    pandas>=1.1
    matplotlib>=3.3
    jupyterlab~=3.0
    h5py>=3.1
    k3d>=2.11
    scipy>=1.6
    jinja2
    vtk
    xarray
include_package_data = True

[options.extras_require]
dev = build;invoke;nbval;pre-commit;pytest-cov;twine

[options.entry_points]
console_scripts =
  ovf2vtk = discretisedfield.ovf2vtk:main

[flake8]
exclude =
  .git,
  __pycache__,
  build,
  dev,
  dist,
  setup.py
# D107: missing docstring in __init__
# RST210: Inline strong start-string without end-string.  # complains about "**kwargs" in docstrings
extend-ignore = D107, RST210
per-file-ignores =
  # imported but unused
  __init__.py: F401
  # ignore missing docstrings in tests
  test_*.py: D100,D101,D102,D103
docstring-convention: numpy
# flake8-rst-docstrings:
rst-roles =
  py:class,
  py:func,
rst-directives =
  seealso,
  plot,

[codespell]
skip = .*,build/*,dev/*,dist/*
